# Poverty

./: .travis.yml  CMakeLists.txt  README.md
.CI/: travis_test_script.sh
extra/: test.py
py/: generate_poverty.py
templates/: Poverty.cpp.jinja  Poverty.hpp.jinja  Poverty.jinja.cpp  Poverty.jinja.hpp  PovertyPythonModule.cpp.jinja  PovertyPythonModule.jinja.cpp
